{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 951,
  "lineage": "bbc38476-af4a-a8e1-e3be-fae32d299d98",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:131578276461:security-group/sg-0ed7f1f25a46b3571",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ed7f1f25a46b3571",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-05c2d0daa89c88752"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20220704203642983900000003",
            "name_prefix": "terraform-",
            "owner_id": "131578276461",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-075b60444356a8a9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internal_alb_security_group.aws_security_group.security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webapp_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:131578276461:security-group/sg-0e33c91ae44aa2eb9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e33c91ae44aa2eb9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-098f70503709547ae"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20220704203643307900000004",
            "name_prefix": "terraform-",
            "owner_id": "131578276461",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-075b60444356a8a9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_alb_security_group.aws_security_group.security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.internal-alb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:131578276461:loadbalancer/app/forrester-ecs-internal-alb/d042a00eb66ed02a",
            "arn_suffix": "app/forrester-ecs-internal-alb/d042a00eb66ed02a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-forrester-ecs-internal-alb-158597907.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:131578276461:loadbalancer/app/forrester-ecs-internal-alb/d042a00eb66ed02a",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "forrester-ecs-internal-alb",
            "security_groups": [
              "sg-05c2d0daa89c88752"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00727c1f558485c50"
              },
              {
                "subnet_id": "subnet-0765c6e6ff75a5cc7"
              },
              {
                "subnet_id": "subnet-07bc9513f968366ad"
              }
            ],
            "subnets": [
              "subnet-00727c1f558485c50",
              "subnet-0765c6e6ff75a5cc7",
              "subnet-07bc9513f968366ad"
            ],
            "vpc_id": "vpc-075b60444356a8a9b",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.internal_alb_security_group.aws_security_group.security_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.internal-alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "HTTP",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:131578276461:listener/app/forrester-ecs-internal-alb/d042a00eb66ed02a/2f042056668d9df8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "No routes defined",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:131578276461:listener/app/forrester-ecs-internal-alb/d042a00eb66ed02a/2f042056668d9df8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:131578276461:loadbalancer/app/forrester-ecs-internal-alb/d042a00eb66ed02a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internal-alb.aws_alb.alb",
            "module.internal_alb_security_group.aws_security_group.security_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.internal-alb",
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "alb_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Customer",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:131578276461:targetgroup/customer-tg/bca6fd43b8314182",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:131578276461:listener-rule/app/forrester-ecs-internal-alb/d042a00eb66ed02a/2f042056668d9df8/56bf49fdfe9b2285",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/customer*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:131578276461:listener-rule/app/forrester-ecs-internal-alb/d042a00eb66ed02a/2f042056668d9df8/56bf49fdfe9b2285",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:131578276461:listener/app/forrester-ecs-internal-alb/d042a00eb66ed02a/2f042056668d9df8",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internal-alb.aws_alb.alb",
            "module.internal-alb.aws_alb_listener.alb_listener",
            "module.internal-alb.aws_alb_target_group.alb_target_group",
            "module.internal_alb_security_group.aws_security_group.security_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "Transaction",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:131578276461:targetgroup/transaction-tg/c636a4ec239419c8",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:131578276461:listener-rule/app/forrester-ecs-internal-alb/d042a00eb66ed02a/2f042056668d9df8/6779374d54f4d577",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/transaction*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:131578276461:listener-rule/app/forrester-ecs-internal-alb/d042a00eb66ed02a/2f042056668d9df8/6779374d54f4d577",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:131578276461:listener/app/forrester-ecs-internal-alb/d042a00eb66ed02a/2f042056668d9df8",
            "priority": 2,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internal-alb.aws_alb.alb",
            "module.internal-alb.aws_alb_listener.alb_listener",
            "module.internal-alb.aws_alb_target_group.alb_target_group",
            "module.internal_alb_security_group.aws_security_group.security_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.internal-alb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Customer",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:131578276461:targetgroup/customer-tg/bca6fd43b8314182",
            "arn_suffix": "targetgroup/customer-tg/bca6fd43b8314182",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:131578276461:targetgroup/customer-tg/bca6fd43b8314182",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "customer-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-075b60444356a8a9b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "Transaction",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:131578276461:targetgroup/transaction-tg/c636a4ec239419c8",
            "arn_suffix": "targetgroup/transaction-tg/c636a4ec239419c8",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:131578276461:targetgroup/transaction-tg/c636a4ec239419c8",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "transaction-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-075b60444356a8a9b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.internal_alb_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:131578276461:security-group/sg-05c2d0daa89c88752",
            "description": "forrester-ecs-internal-alb-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "10.100.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c2d0daa89c88752",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.100.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "forrester-ecs-internal-alb-sg",
            "name_prefix": "",
            "owner_id": "131578276461",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-075b60444356a8a9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public-alb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:131578276461:loadbalancer/app/forrester-ecs-public-alb/d9877bb10f4fd0c6",
            "arn_suffix": "app/forrester-ecs-public-alb/d9877bb10f4fd0c6",
            "desync_mitigation_mode": "defensive",
            "dns_name": "forrester-ecs-public-alb-114384913.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:131578276461:loadbalancer/app/forrester-ecs-public-alb/d9877bb10f4fd0c6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "forrester-ecs-public-alb",
            "security_groups": [
              "sg-098f70503709547ae"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0150c1577c7191735"
              },
              {
                "subnet_id": "subnet-0505ec34fa35d5c59"
              },
              {
                "subnet_id": "subnet-0ee294d11d6352c06"
              }
            ],
            "subnets": [
              "subnet-0150c1577c7191735",
              "subnet-0505ec34fa35d5c59",
              "subnet-0ee294d11d6352c06"
            ],
            "vpc_id": "vpc-075b60444356a8a9b",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.public_alb_security_group.aws_security_group.security_group",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public-alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "HTTP",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:131578276461:listener/app/forrester-ecs-public-alb/d9877bb10f4fd0c6/0e7200ec045f998b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "No routes defined",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:131578276461:listener/app/forrester-ecs-public-alb/d9877bb10f4fd0c6/0e7200ec045f998b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:131578276461:loadbalancer/app/forrester-ecs-public-alb/d9877bb10f4fd0c6",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public-alb.aws_alb.alb",
            "module.public_alb_security_group.aws_security_group.security_group",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public-alb",
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "alb_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "WebApp",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:131578276461:targetgroup/webapp-tg/cbfb4fc9d8545032",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:131578276461:listener-rule/app/forrester-ecs-public-alb/d9877bb10f4fd0c6/0e7200ec045f998b/b0a1210f37ade6fe",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:131578276461:listener-rule/app/forrester-ecs-public-alb/d9877bb10f4fd0c6/0e7200ec045f998b/b0a1210f37ade6fe",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:131578276461:listener/app/forrester-ecs-public-alb/d9877bb10f4fd0c6/0e7200ec045f998b",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public-alb.aws_alb.alb",
            "module.public-alb.aws_alb_listener.alb_listener",
            "module.public-alb.aws_alb_target_group.alb_target_group",
            "module.public_alb_security_group.aws_security_group.security_group",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public-alb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "WebApp",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:131578276461:targetgroup/webapp-tg/cbfb4fc9d8545032",
            "arn_suffix": "targetgroup/webapp-tg/cbfb4fc9d8545032",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:131578276461:targetgroup/webapp-tg/cbfb4fc9d8545032",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "webapp-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-075b60444356a8a9b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_alb_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:131578276461:security-group/sg-098f70503709547ae",
            "description": "forrester-ecs-public-alb-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098f70503709547ae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "forrester-ecs-public-alb-sg",
            "name_prefix": "",
            "owner_id": "131578276461",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-075b60444356a8a9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-035377aa0e797404a",
            "association_id": "eipassoc-02aa2047d41a4a9f6",
            "domain": "vpc",
            "id": "eipalloc-035377aa0e797404a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09cee1f9c591a2883",
            "private_dns": "ip-10-100-0-86.ec2.internal",
            "private_ip": "10.100.0.86",
            "public_dns": "ec2-54-161-40-75.compute-1.amazonaws.com",
            "public_ip": "54.161.40.75",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:131578276461:internet-gateway/igw-046a18c1dc297a98b",
            "id": "igw-046a18c1dc297a98b",
            "owner_id": "131578276461",
            "tags": {
              "Env": "dev",
              "Name": "forrester-ecs"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "forrester-ecs"
            },
            "vpc_id": "vpc-075b60444356a8a9b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-035377aa0e797404a",
            "connectivity_type": "public",
            "id": "nat-08d2cb9700e26eef3",
            "network_interface_id": "eni-09cee1f9c591a2883",
            "private_ip": "10.100.0.86",
            "public_ip": "54.161.40.75",
            "subnet_id": "subnet-0ee294d11d6352c06"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0573bb04fd9909cbb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08d2cb9700e26eef3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0573bb04fd9909cbb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route_table"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-046a18c1dc297a98b",
            "id": "r-rtb-0b602b98ab35f2ba91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b602b98ab35f2ba9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:131578276461:route-table/rtb-0573bb04fd9909cbb",
            "id": "rtb-0573bb04fd9909cbb",
            "owner_id": "131578276461",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08d2cb9700e26eef3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "forrester-ecsprivate-route-table"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "forrester-ecsprivate-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-075b60444356a8a9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:131578276461:route-table/rtb-0b602b98ab35f2ba9",
            "id": "rtb-0b602b98ab35f2ba9",
            "owner_id": "131578276461",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-046a18c1dc297a98b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "forrester-ecspublic-route-table"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "forrester-ecspublic-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-075b60444356a8a9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02bcd624757894ad8",
            "route_table_id": "rtb-0573bb04fd9909cbb",
            "subnet_id": "subnet-0765c6e6ff75a5cc7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01fa223a5969a075d",
            "route_table_id": "rtb-0573bb04fd9909cbb",
            "subnet_id": "subnet-07bc9513f968366ad"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f3740723b536525",
            "route_table_id": "rtb-0573bb04fd9909cbb",
            "subnet_id": "subnet-00727c1f558485c50"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1195d70e8aeb8e3",
            "route_table_id": "rtb-0b602b98ab35f2ba9",
            "subnet_id": "subnet-0ee294d11d6352c06"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0261d6470fb0f6a6d",
            "route_table_id": "rtb-0b602b98ab35f2ba9",
            "subnet_id": "subnet-0150c1577c7191735"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05351af4f943675c4",
            "route_table_id": "rtb-0b602b98ab35f2ba9",
            "subnet_id": "subnet-0505ec34fa35d5c59"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:131578276461:subnet/subnet-0765c6e6ff75a5cc7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.100.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0765c6e6ff75a5cc7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "131578276461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "forrester-ecs-private-subnet-0"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "forrester-ecs-private-subnet-0"
            },
            "vpc_id": "vpc-075b60444356a8a9b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:131578276461:subnet/subnet-07bc9513f968366ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.100.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07bc9513f968366ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "131578276461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "forrester-ecs-private-subnet-1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "forrester-ecs-private-subnet-1"
            },
            "vpc_id": "vpc-075b60444356a8a9b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:131578276461:subnet/subnet-00727c1f558485c50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.100.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00727c1f558485c50",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "131578276461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "forrester-ecs-private-subnet-2"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "forrester-ecs-private-subnet-2"
            },
            "vpc_id": "vpc-075b60444356a8a9b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:131578276461:subnet/subnet-0ee294d11d6352c06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.100.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee294d11d6352c06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "131578276461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "forrester-ecs-public-subnet-0"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "forrester-ecs-public-subnet-0"
            },
            "vpc_id": "vpc-075b60444356a8a9b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:131578276461:subnet/subnet-0150c1577c7191735",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.100.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0150c1577c7191735",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "131578276461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "forrester-ecs-public-subnet-1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "forrester-ecs-public-subnet-1"
            },
            "vpc_id": "vpc-075b60444356a8a9b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:131578276461:subnet/subnet-0505ec34fa35d5c59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.100.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0505ec34fa35d5c59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "131578276461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "forrester-ecs-public-subnet-2"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "forrester-ecs-public-subnet-2"
            },
            "vpc_id": "vpc-075b60444356a8a9b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:131578276461:vpc/vpc-075b60444356a8a9b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-009706138c5b97054",
            "default_route_table_id": "rtb-0623cf358c074bf84",
            "default_security_group_id": "sg-014478dc4b1f06d1b",
            "dhcp_options_id": "dopt-c19231a4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-075b60444356a8a9b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0623cf358c074bf84",
            "owner_id": "131578276461",
            "tags": {
              "Env": "dev",
              "Name": "forrester-ecs"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "forrester-ecs"
            }
          }
        }
      ]
    }
  ]
}